# moveit_pro_so-101_ws

./: README.md
src/so101_base_config/: CMakeLists.txt  package.xml
src/so101_base_config/config/: config.yaml
src/so101_base_config/config/control/: so101.ros2_control.yaml
src/so101_base_config/config/moveit/: joint_limits.yaml  sensors_3d.yaml  so101.srdf
src/so101_base_config/description/: so101.ros2_control.xacro  so101.urdf.xacro
src/so101_base_config/objectives/: close_gripper.xml  move_to_home.xml  move_to_ready.xml  open_gripper.xml
src/so101_base_config/waypoints/: waypoints.yaml
src/so101_description/: CMakeLists.txt
src/so101_description/meshes/: handle_so101_v1.stl  trigger_so101_v1.stl  wrist_roll_so101_v1.stl
src/so101_hw/: CMakeLists.txt  package.xml
src/so101_hw/config/: config.yaml  follower_joints.yaml
src/so101_hw/description/: so101_hw.urdf.xacro
src/so101_hw/launch/: agent_bridge.launch.xml
