<?xml version="1.0" ?>
<package format="3">
  <name>so101_hw</name>
  <version>0.1.0</version>

  <description>
    Physical-hardware MoveIt Pro configuration for the SO-101 arm. Inherits from
    so101_base_config and drives the real Feetech STS3215 bus servos through the
    feetech_ros2_driver ros2_control hardware interface over a USB-TTL adapter.
  </description>

  <maintainer email="jonathan.fries@picknik.ai">Jonathan Fries</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>so101_base_config</exec_depend>
  <exec_depend>so101_description</exec_depend>
  <exec_depend>feetech_ros2_driver</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
